# python-dist-package

./: README.md  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml  python-publish.yml  unit-test.yml
src/pypack/: __init__.py  module.py
tests/: test_module.py
