[metadata]
name = python-dist-package
version = 0.0.0
author = Riccardo Lincetto
author_email = riccardo.lincetto@gmail.com
description = Template structure for a CI-enabled Python package, to be distributed with pip.
license = GNU General Public License v3.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RiccardoLincetto/python-dist-package
project_urls =
    Bug Tracker = https://github.com/RiccardoLincetto/python-dist-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
